--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Blog
-author: QYF
-email: harryqinyf@outlook.com
+author: Matt Qin
+email: yongliqin0321@outlook.com
 description: Just a blog.
 favicon: "./favicon.ico"
-url: https://leafy-pastelito-ae786e.netlify.app/
+url: https://yongli-qin.github.io/
 
 # Build settings
 remote_theme: huangyz0918/moving
@@ -18,9 +18,9 @@ last-modified-at:
 
 moving:
   about_you: Developer
-  avatar_url: "https://i.loli.net/2021/09/19/1eVZ5plD2Ub3XBE.jpg"
+  avatar_url: "https://i.imghippo.com/files/TuBU2532dzo.jpg"
   date_format: "%b %d"
   back_to: "Index"
   social_links:
-    github:  harryqin99
+    github:  YongLi-Qin
 
